# dentistry

./: .gitignore  .hgignore  .pylintrc  manage.py  pyproject.toml  pytest.ini
Dentistry/: asgi.py  settings.py  urls.py  wsgi.py
DentistryApp/: admin.py  apps.py  forms.py  models.py  streams.py  views.py
DentistryApp/migrations/: 0001_initial.py
DentistryApp/templates/: base.html  base_ext.html  login_logout_frame.html  main.html  past_reservations.html  register.html  register_form_frame.html  register_frame.html  reservation_ok.html  reservation_result.html  reservations_frame.html  reserve_form_frame.html  test-form.html  test.html
tests/: test_basic.py
