[tool.poetry]
name = "dentistry-2024"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.0"
# turbo-django = "^0.3.0"
# channels-redis = "^3.4.0"
django-htmx = "^1.17.3"

[tool.poetry.dev-dependencies]
# black = "^22.3.0"
pylint-django = "^2.5.3"
# waitress = "^2.1.1"
whitenoise = "^6.0.0"
# uvicorn = "^0.17.6"
# websockets = "^10.2"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
